--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
 
         <article>
-            <h2>Artigo 001</h2>
+            <h2>Curso de HTML5 com CSS</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quasi incidunt dolores expedita vel iusto? Recusandae earum sint repudiandae vitae, dicta, incidunt eos accusantium ab placeat quo nobis quam esse.</p>
         </article>
 
         <article>
-            <h2>Artigo 002</h2>
+            <h2>Curso de JavaScript</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam ex ea, in iure, eaque accusantium quae blanditiis, similique soluta quidem animi laudantium quis impedit natus enim officiis eligendi tempore voluptate!</p>
         </article>
     </main>
