--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
         <article>
             <h2>Curso de HTML5 com CSS</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum quasi incidunt dolores expedita vel iusto? Recusandae earum sint repudiandae vitae, dicta, incidunt eos accusantium ab placeat quo nobis quam esse.</p>
+            <p>HTML5 e CSS3 são as versões mais recentes do HTML (linguagem de marcação para estruturar conteúdo em páginas web) e CSS (folhas de estilo para estilizar essas páginas), respectivamente. O HTML5 trouxe melhorias na estruturação semântica e suporte nativo a elementos multimídia, como áudio e vídeo. O CSS3 introduziu recursos avançados de estilização, como transições, animações e bordas arredondadas. Juntos, são essenciais para o desenvolvimento web moderno.</p>
         </article>
 
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam ex ea, in iure, eaque accusantium quae blanditiis, similique soluta quidem animi laudantium quis impedit natus enim officiis eligendi tempore voluptate!</p>
+            <p>JavaScript é uma linguagem de programação usada principalmente para desenvolvimento web. Ela permite adicionar interatividade às páginas, responder a eventos do usuário e modificar dinamicamente o conteúdo. JavaScript pode ser executado no navegador do usuário (lado do cliente) e, mais recentemente, no servidor (usando o ambiente Node.js). É uma parte fundamental da tríade web, junto com HTML e CSS.</p>
         </article>
     </main>
 </body>
